# RP2040-FreeRTOS-experiments

./: CMakeLists.txt  README.md
App-Temperature/: CMakeLists.txt  main.c
Config/: FreeRTOSConfig.h
